OO-3296: start implementation administrator and other roles per organization, implement segment view for user visit card to better inline in user management, implements several features for all roles (allow enrollment, mandatory confirmation email by enrollment, allow autocomplete, bulk changes...), add roles like lecture manager, quality manager..., enhance the roles editor in user management